// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
    "sisyphus": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models when only Claude is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models with isMax20 flag when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/claude-haiku-4-5",
    },
    "manon-explorer": {
      "model": "opencode/claude-haiku-4-5",
    },
    "sisyphus": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/kimi-k2.5",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "opencode/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/claude-haiku-4-5",
    },
    "manon-explorer": {
      "model": "opencode/claude-haiku-4-5",
    },
    "sisyphus": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/kimi-k2.5",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "opencode/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + OpenCode Zen combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/claude-haiku-4-5",
    },
    "manon-explorer": {
      "model": "opencode/claude-haiku-4-5",
    },
    "sisyphus": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/kimi-k2.5",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "opencode/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + ZAI combination (librarian uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Gemini + Claude combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/glm-4.7-fp8",
    },
    "manon-explorer": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-fp8",
    },
    "deep": {
      "model": "opencode/glm-4.7-fp8",
    },
    "quick": {
      "model": "opencode/glm-4.7-fp8",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-fp8",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-fp8",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-fp8",
    },
    "writing": {
      "model": "opencode/glm-4.7-fp8",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/claude-haiku-4-5",
    },
    "manon-explorer": {
      "model": "opencode/claude-haiku-4-5",
    },
    "sisyphus": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/kimi-k2.5",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "opencode/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/claude-haiku-4-5",
    },
    "manon-explorer": {
      "model": "opencode/claude-haiku-4-5",
    },
    "sisyphus": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/kimi-k2.5",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "opencode/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/dev/assets/oh-my-opencode.schema.json",
  "agents": {
    "librarian": {
      "model": "opencode/claude-haiku-4-5",
    },
    "manon-explorer": {
      "model": "opencode/claude-haiku-4-5",
    },
    "sisyphus": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/kimi-k2.5",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "opencode/claude-sonnet-4-6",
    },
  },
}
`;
